ios/openim_sdk_ffi.xcframework/ios-arm64/openim_sdk_ffi.framework/openim_sdk_ffi.h

extern char* CreateImageMessageFromFullPath(char* operationID, char* imageFullPath);
extern char* CreateImageMessageByURL(char* operationID, char* sourcePath, char* sourcePicture, char* bigPicture, char* snapshotPicture);
extern char* CreateForwardMessage(char* operationID, char* m);
extern char* CreateLocationMessage(char* operationID, char* description, double longitude, double latitude);
extern char* CreateQuoteMessage(char* operationID, char* text, char* message);
extern char* CreateCardMessage(char* operationID, char* cardInfo);
extern char* CreateCustomMessage(char* operationID, char* data, char* extension, char* description);
extern void SendMessage(char* operationID, char* message, char* recvID, char* groupID, char* offlinePushInfo);
extern void SendMessageNotOss(char* operationID, char* message, char* recvID, char* groupID, char* offlinePushInfo);
extern void TypingStatusUpdate(char* operationID, char* recvID, char* msgTip);
extern void RevokeMessage(char* operationID, char* conversationID, char* clientMsgID);
extern void DeleteMessage(char* operationID, char* conversationID, char* clientMsgID);
extern void DeleteMessageFromLocalStorage(char* operationID, char* conversationID, char* clientMsgID);
extern void DeleteAllMsgFromLocal(char* operationID);
extern void DeleteAllMsgFromLocalAndSvr(char* operationID);
extern void SearchLocalMessages(char* operationID, char* searchParam);
extern void GetAdvancedHistoryMessageList(char* operationID, char* getMessageOptions);
extern void GetAdvancedHistoryMessageListReverse(char* operationID, char* getMessageOptions);