lib/openim_ffi_bindings_generated.dart


  ffi.Pointer<ffi.Char> CreateImageMessageFromFullPath(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> imageFullPath,
  ) {
    return _CreateImageMessageFromFullPath(operationID, imageFullPath);
  }

  late final _CreateImageMessageFromFullPathPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateImageMessageFromFullPath');
  late final _CreateImageMessageFromFullPath =
      _CreateImageMessageFromFullPathPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateImageMessageByURL(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> sourcePath,
    ffi.Pointer<ffi.Char> sourcePicture,
    ffi.Pointer<ffi.Char> bigPicture,
    ffi.Pointer<ffi.Char> snapshotPicture,
  ) {
    return _CreateImageMessageByURL(
      operationID,
      sourcePath,
      sourcePicture,
      bigPicture,
      snapshotPicture,
    );
  }

  late final _CreateImageMessageByURLPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateImageMessageByURL');
  late final _CreateImageMessageByURL =
      _CreateImageMessageByURLPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateForwardMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> m,
  ) {
    return _CreateForwardMessage(operationID, m);
  }

  late final _CreateForwardMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateForwardMessage');
  late final _CreateForwardMessage =
      _CreateForwardMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateLocationMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> description,
    double longitude,
    double latitude,
  ) {
    return _CreateLocationMessage(
      operationID,
      description,
      longitude,
      latitude,
    );
  }

  late final _CreateLocationMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Double,
        ffi.Double,
      )
    >
  >('CreateLocationMessage');
  late final _CreateLocationMessage =
      _CreateLocationMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          double,
          double,
        )
      >();

  ffi.Pointer<ffi.Char> CreateQuoteMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _CreateQuoteMessage(operationID, text, message);
  }

  late final _CreateQuoteMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateQuoteMessage');
  late final _CreateQuoteMessage =
      _CreateQuoteMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateCardMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> cardInfo,
  ) {
    return _CreateCardMessage(operationID, cardInfo);
  }

  late final _CreateCardMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateCardMessage');
  late final _CreateCardMessage =
      _CreateCardMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateCustomMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> data,
    ffi.Pointer<ffi.Char> extension1,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _CreateCustomMessage(operationID, data, extension1, description);
  }

  late final _CreateCustomMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateCustomMessage');
  late final _CreateCustomMessage =
      _CreateCustomMessagePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void SendMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> recvID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> offlinePushInfo,
  ) {
    return _SendMessage(operationID, message, recvID, groupID, offlinePushInfo);
  }

  late final _SendMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('SendMessage');
  late final _SendMessage =
      _SendMessagePtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void SendMessageNotOss(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> recvID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> offlinePushInfo,
  ) {
    return _SendMessageNotOss(
      operationID,
      message,
      recvID,
      groupID,
      offlinePushInfo,
    );
  }

  late final _SendMessageNotOssPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('SendMessageNotOss');
  late final _SendMessageNotOss =
      _SendMessageNotOssPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void TypingStatusUpdate(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> recvID,
    ffi.Pointer<ffi.Char> msgTip,
  ) {
    return _TypingStatusUpdate(operationID, recvID, msgTip);
  }

  late final _TypingStatusUpdatePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('TypingStatusUpdate');
  late final _TypingStatusUpdate =
      _TypingStatusUpdatePtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void RevokeMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> clientMsgID,
  ) {
    return _RevokeMessage(operationID, conversationID, clientMsgID);
  }

  late final _RevokeMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('RevokeMessage');
  late final _RevokeMessage =
      _RevokeMessagePtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void DeleteMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> clientMsgID,
  ) {
    return _DeleteMessage(operationID, conversationID, clientMsgID);
  }

  late final _DeleteMessagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('DeleteMessage');
  late final _DeleteMessage =
      _DeleteMessagePtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void DeleteMessageFromLocalStorage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> clientMsgID,
  ) {
    return _DeleteMessageFromLocalStorage(
      operationID,
      conversationID,
      clientMsgID,
    );
  }

  late final _DeleteMessageFromLocalStoragePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('DeleteMessageFromLocalStorage');
  late final _DeleteMessageFromLocalStorage =
      _DeleteMessageFromLocalStoragePtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void DeleteAllMsgFromLocal(ffi.Pointer<ffi.Char> operationID) {
    return _DeleteAllMsgFromLocal(operationID);
  }

  late final _DeleteAllMsgFromLocalPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'DeleteAllMsgFromLocal',
      );
  late final _DeleteAllMsgFromLocal =
      _DeleteAllMsgFromLocalPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>)
      >();

  void DeleteAllMsgFromLocalAndSvr(ffi.Pointer<ffi.Char> operationID) {
    return _DeleteAllMsgFromLocalAndSvr(operationID);
  }

  late final _DeleteAllMsgFromLocalAndSvrPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'DeleteAllMsgFromLocalAndSvr',
      );
  late final _DeleteAllMsgFromLocalAndSvr =
      _DeleteAllMsgFromLocalAndSvrPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>)
      >();

  void SearchLocalMessages(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> searchParam,
  ) {
    return _SearchLocalMessages(operationID, searchParam);
  }

  late final _SearchLocalMessagesPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('SearchLocalMessages');
  late final _SearchLocalMessages =
      _SearchLocalMessagesPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetAdvancedHistoryMessageList(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> getMessageOptions,
  ) {
    return _GetAdvancedHistoryMessageList(operationID, getMessageOptions);
  }

  late final _GetAdvancedHistoryMessageListPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('GetAdvancedHistoryMessageList');
  late final _GetAdvancedHistoryMessageList =
      _GetAdvancedHistoryMessageListPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetAdvancedHistoryMessageListReverse(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> getMessageOptions,
  ) {
    return _GetAdvancedHistoryMessageListReverse(
      operationID,
      getMessageOptions,
    );
  }
